--- a/Frontend/src/feature/Login/index.css
+++ b/Frontend/src/feature/Login/index.css
@@ -1,4 +1,4 @@
-.signup {
+.login {
     width: 350px;
     padding: 30px 20px;
     font-size: 14px;
@@ -9,7 +9,7 @@
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
-.signup h3 {
+.login h3 {
     font-size: 18px;
     margin: 0;
     margin-bottom: 10px;
@@ -17,14 +17,14 @@
     font-weight: bold;
 }
 
-.signup-form {
+.login-form {
     display: flex;
     flex-direction: column;
     gap: 20px;
     padding: 10px;
 }
 
-.signup-form input {
+.login-form input {
     padding: 10px;
     font-size: 15px;
     color: #6b7280;
@@ -33,7 +33,7 @@
     outline: none;
 }
 
-.signup-btn {
+.login-btn {
     padding: 10px;
     border: none;
     border-radius: 5px;
@@ -43,12 +43,12 @@
     background-color: #2979ff;
 }
 
-.lbtn {
+.sbtn {
     font-size: 13px;
 }
 
 @media (max-width: 600px) {
-    .signup {
+    .login {
         width: 100%;
         height: 100vh;
         box-shadow: none;
